# tlm

./: .eslintignore  .eslintrc.js  .gitignore  .mise.toml  .prettierignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  codecov.yml  eslint.config.js  jest-unit.json  jest.config.base.js  jest.config.js  lerna.json  package.json  pnpm-lock.yaml  sonar-project.properties  tlm.code-workspace  tsconfig.base.json  tsconfig.json  tslint.json
.claude/: settings.json
.github/workflows/: CI.yml
docs/: HISTORY.md
script/: README.md  bootstrap-build-container.sh  bootstrap-build-tools.ps1  bootstrap-build-tools.sh  bootstrap-requirements.ps1  bootstrap-requirements.sh  bootstrap.ps1  bootstrap.sh  cibuild-win.ps1  cibuild.ps1  cibuild.sh  common.ps1  common.sh  console.sh  destroy-build-container.sh  destroy-postgres-container.ps1  destroy-postgres-container.sh  destroy.ps1  destroy.sh  psql.ps1  psql.sh  server.ps1  server.sh  settings-ci.ps1  settings-ci.sh  settings-ciwin.ps1  settings.ps1  settings.sh  setup-log.sh  setup-postgres-container.ps1  setup-postgres-container.sh  setup-postgres-db.ps1  setup-postgres-db.sh  setup-postgres-pgtap.ps1  setup-postgres-pgtap.sh  setup.ps1  setup.sh  shellcheck.sh  test-js.ps1  test-js.sh  (+7 more)
zx/: bootstrap-requirements.mjs  bootstrap.mjs  clean.mjs  common.mjs  dedupe-deps.mjs  destroy.mjs  lint.mjs  rust-lint.mjs  rust-test.mjs  settings.mjs  setup-playwright.mjs  setup-postgres-container.mjs  setup-postgres-db.mjs  setup-postgres-pgtap.mjs  setup.mjs  test-js.mjs  test-sql.mjs  test.mjs  x.mjs
(+46 files in other folders)
