[workspace]
resolver = "2"

members = [
    "packages/tlm-rust"
]

[workspace.package]
edition = "2024"
authors = ["Leo Simons <mail@leosimons.com>"]
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/typelinkmodel/tlm"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
